--- a/src/views/Products/style.css
+++ b/src/views/Products/style.css
@@ -1,9 +1,62 @@
-.colorBox{
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    border :1px solid #ccc
+.colorBox {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
 }
-.trash{
-    color:orangered
+.trash {
+  color: orangered;
+}
+
+.fileSelection {
+  padding: 0.25rem 0.5rem;
+  font-size: 1.245rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
+  background-color: #20a8d8;
+  border-color: #20a8d8;
+  color: #fff;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.file-dashed {
+  border: 2px dashed #ccc;
+  padding: 20px;
+  text-align: center;
+}
+
+.previewImage {
+  height: auto;
+  width: 200px;
+  border-radius: 5px;
+}
+
+.showImage {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+}
+.table-img{
+  max-height: 200px;
+  max-width: 200px;
+}
+.flex-inline{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+}
+.table-dark tr th{
+  text-align: center;
+}
+
+.table tr td{
+  text-align: center;
+}
+.icon{
+  color:white
 }
