add products and show that's sellers

--- a/src/views/Shop/style.css
+++ b/src/views/Shop/style.css
@@ -87,3 +87,8 @@ input[type="file"] {
   text-decoration: underline;
   cursor: pointer;
 }
+
+.borderLine{
+  height: 1px;
+  background-color: #ccc;
+}
